--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,5 @@
 2017-06-21 Fred Gleason <fredg@paravelsystems.com>
 	* Initial package creation.
+2017-06-21 Fred Gleason <fredg@paravelsystems.com>
+	* Added support for '/etc/flipscript.d/' and '/usr/lib/flipscripts/'
+	directories.
