--- a/ChangeLog
+++ b/ChangeLog
@@ -3,3 +3,6 @@
 2017-06-21 Fred Gleason <fredg@paravelsystems.com>
 	* Added support for '/etc/flipscript.d/' and '/usr/lib/flipscripts/'
 	directories.
+2017-06-21 Fred Gleason <fredg@paravelsystems.com>
+	* Added code to select flip files with or without including the 'flip'
+	extension.
