--- a/ChangeLog
+++ b/ChangeLog
@@ -8,3 +8,5 @@
 	extension.
 2017-06-21 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented a '--list' switch.
+2017-06-21 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the package version to 0.6.0.
