2017-06-22 Fred Gleason <fredg@paravelsystems.com> 	* Implemented a '--dump' switch.

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,3 +12,5 @@
 	* Incremented the package version to 0.6.0.
 2017-06-22 Fred Gleason <fredg@paravelsystems.com>
 	* Renamed 'flip.py' to 'flip'.
+2017-06-22 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented a '--dump' switch.
