2017-06-27 Fred Gleason <fredg@paravelsystems.com> 	* Implemented a 'username=' directive.

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,3 +18,5 @@
 	* Incremented the package version to 0.6.1.
 2017-06-27 Fred Gleason <fredg@paravelsystems.com>
 	* Added a flip(1) man page.
+2017-06-27 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented a 'username=' directive.
