2017-07-03 Fred Gleason <fredg@paravelsystems.com> 	* Incremented the package version to 0.6.3.

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,3 +27,5 @@
 2017-07-03 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug that caused reading a command= line containing '='
 	characters to fail.
+2017-07-03 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the package version to 0.6.3.
