2017-07-10 Fred Gleason <fredg@paravelsystems.com> 	* Implemented a '--command=' switch. 	* Implemented a '--hostname=' switch. 	* Implemented a '--identity=' switch. 	* Implemented a '--username=' switch.

--- a/ChangeLog
+++ b/ChangeLog
@@ -34,3 +34,5 @@
 	* Implemented a '--hostname=' switch.
 	* Implemented a '--identity=' switch.
 	* Implemented a '--username=' switch.
+2017-07-10 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the package version to 0.6.4.
