--- a/ChangeLog
+++ b/ChangeLog
@@ -36,3 +36,5 @@
 	* Implemented a '--username=' switch.
 2017-07-10 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.6.4.
+2017-07-13 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented a '--label' switch.
