2025-04-16 Fred Gleason <fredg@paravelsystems.com> 	* Moved the location for the system-wide flip script store from 	'/usr/lib/flipscripts/' to '/var/lib/flipscripts/'.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -62,3 +62,6 @@
 	'/usr/share/flipscript/flip.exp'.
 2025-04-16 Fred Gleason <fredg@paravelsystems.com>
 	* Moved the 'flip' command source file to 'commands/flip.py'.
+2025-04-16 Fred Gleason <fredg@paravelsystems.com>
+	* Moved the location for the system-wide flip script store from
+	'/usr/lib/flipscripts/' to '/var/lib/flipscripts/'.
