--- a/ChangeLog
+++ b/ChangeLog
@@ -70,3 +70,5 @@
 	output listings.
 2025-04-16 Fred Gleason <fredg@paravelsystems.com>
 	* Added a mscp(1) command.
+2025-04-16 Fred Gleason <fredg@paravelsystems.com>
+	* Simplified expect(1) script generation in flip(1).
